<resources>
    <string name="app_name">Marikh Coupon</string>
    <string name="marikh_coupon">marikh coupon</string>
    <string name="nama">Nama</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="email">Email</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="mendaftar">Mendaftar</string>
    <string name="login">Login</string>
    <string name="redeem_your_special_coupon">Redeem Your Special Coupon</string>
    <string name="hi_teman_marikh">Hi Teman Marikh</string>
    <string name="happy_birthday_x">Happy Birthday,</string>
    <string name="marikh_punya_sesuatu_buat_kamu">Marikh Punya Sesuatu Buat Kamu</string>
    <string name="scan_qrcode_di_marikh_salatiga">Scan QRcode di Marikh Salatiga</string>
    <string name="your_coupon">Your Coupon</string>
    <string name="nama_kupon">nama kupon</string>
    <string name="exp_date">exp date</string>
    <string name="use_it">Use It</string>
    <string name="yaaah_kamu_belum_beruntung">YAAAH.. KAMU BELUM BERUNTUNG</string>
    <string name="santuy_besok_coba_lagi_yaa_karena">Santuy, besok coba lagi yaa, karena</string>
    <string name="semua_indah_pada_waktunya">SEMUA INDAH PADA WAKTUNYA</string>
    <string name="whaaa_selamaaat">WHAAA SELAMAAAT!!!!</string>
    <string name="kamu_mendapat">kamu mendapat</string>
    <string name="kupon_yang_didapat">kupon yang didapat</string>
    <string name="todo">TODO</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="nomor_handphone">nomor handphone</string>
    <string name="almat_email">almat email</string>
    <string name="daftar_kupon_kamu">Daftar Kupon Kamu</string>
    <string name="ketuk_disini_ya">Ketuk Disini Ya!!!</string>
    <string name="tunjukan_kupon_ke_kasir_marikh_untuk_menggunakan">Tunjukan Kupon Ke Kasir Marikh Untuk Menggunakan</string>
    <string name="logout">LogOut</string>
    <string name="tapi_jangan_sedih_marikh_kasih_diskon_10_deh">Tapi Jangan Sedih,Marikh Kasih Diskon 10% deh</string>
    <string name="yakin_mau_menggunakan_kupon_ini">yakin mau menggunakan kupon ini?</string>
    <string name="yakinlah">YAKINLAH</string>
    <string name="button">Button</string>
    <string name="yakin_lah">yakin,lah</string>
    <string name="batal_deh">Batal,deh</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="gunakan">gunakan</string>
    <string name="kuy_ketuk_di_sini_ada_keberuntunganmu_loh">Kuy, ketuk di sini.. Ada keberuntunganmu loh!</string>
    <string name="tunjukan_ke_kasir_untuk_menggunakannya">Tunjukan ke kasir untuk menggunakannya</string>
    <string name="ketik_nama_kupon">Ketik nama kupon</string>
    <string name="santuy_jangan_sedih_marikh_kasih_hadiah">santuy! jangan sedih, Marikh kasih hadiah</string>
    <string name="diskon_10_kuy_senyum">diskon 10%, Kuy Senyum :)</string>
    <string name="maaf_cuma_bisa_ketuk_sekali_perhari_besok_datang_lagi_ya">Maaf cuma bisa ketuk sekali perhari :( , besok datang lagi ya</string>
    <string name="maaf_cuma_bisa_ketuk_sekali_perhari">Maaf cuma bisa ketuk sekali perhari,</string>
    <string name="besok_datang_lagi_ya">besok datang lagi ya…!!!</string>
    <string name="eiiitz_jangan_coba_coba_gitu">Eitz, ga bisa kan?</string>
    <string name="scan_qrcode_nya_di_marikh_ya_d">Scan QRcode-nya di Marikh ya :D</string>
    <string name="kuponmu_berhasil_digunakan">Kuponmu berhasil digunakan.</string>
    <string name="besok_datang_lagi_ke_marikh_ya">Besok datang lagi ke Marikh ya..</string>
    <string name="MarikhCoupon">MarikhCoupon</string>
    <string name="yuk_n_ketuk">Ketuk, Yuk!</string>
    <string name="SK"> SYARAT DAN KETENTUAN BERLAKU  </string>
    <string name="detail_SK"> -Diskon 10% maksimal potongan 5K \n -Diskon 20% maksimal potongan 8K \n -Diskon 30% maksimal potongan 10K \n -Diskon 40% maksimal potongan 20K \n -Diskon 50% maksimal potongan 30K \n -Diskon 100% maksimal potongan 50K</string>
    <string name="marikh_punya_kado_buat_kamu">Marikh punya kado buat kamu</string>
    <string name="klik_di_sini_untuk_membuka">klik di sini untuk membuka</string>
    <string name="yey_selamat">YEAY! SELAMAT</string>
    <string name="kamu_mendapatkan">kamu mendapatkan</string>
    <string name="ketik_flappy_di_searchbox_d">ketik dino di searchbox…:D</string>


</resources>
