<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AndaBeruntung"
        android:layout_gravity="center_horizontal|center_vertical">
    <ImageView
            android:id="@+id/imageView5"
            android:layout_width="237dp"
            android:layout_height="236dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ilustrasi_gift"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/todo"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/yey_selamat"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kamu_mendapatkan"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/kuponygdidpt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="marquee"
        android:foregroundGravity="center"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:scrollHorizontally="true"
        android:shadowColor="@android:color/black"
        android:singleLine="true"
        android:text="@string/kupon_yang_didapat"
        android:textColor="#FF7500"
        android:textSize="30sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>