<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".ConfirmCoupon" android:background="@color/bg_white"
        android:layout_gravity="center_horizontal" android:id="@+id/layoutCon">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/yakin_mau_menggunakan_kupon_ini"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonYakin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/transparent"
        android:text="@string/yakin_lah"
        android:textColor="#D81B60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <Button
            android:text="@string/batal_deh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonYakin" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textColor="#D81B60" android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>