<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BelumBeruntung"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/transparent">
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/progressBar04" app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView5" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.81" android:visibility="invisible"/>
    <ImageView
            android:id="@+id/imageView5"
            android:layout_width="237dp"
            android:layout_height="236dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_ilustrasi_kurang_beruntung"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:contentDescription="@string/todo"
            android:visibility="visible"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/yaaah_kamu_belum_beruntung"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/santuy_jangan_sedih_marikh_kasih_hadiah"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/diskon_10_kuy_senyum"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:fontFamily="@font/custom_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.073" />
</androidx.constraintlayout.widget.ConstraintLayout>