<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent" android:layout_height="85dp"
                android:id="@+id/lay">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:id="@+id/rel"
            android:background="@drawable/button_custom"
            android:visibility="gone">

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/singleRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/shadow2">

        <TextView
                android:layout_width="10dp"
                android:layout_height="30dp"
                android:id="@+id/sts"
                android:layout_marginBottom="22dp"
                android:layout_alignBottom="@+id/expdate"
                android:layout_alignTop="@+id/namakupon"
                android:layout_marginTop="-6dp"
                android:layout_toStartOf="@+id/buttonUseIt"
                android:layout_marginRight="283dp"
                android:layout_marginEnd="283dp"
                android:layout_toLeftOf="@+id/buttonUseIt"
                android:visibility="invisible"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nnn"
                android:layout_marginBottom="20dp"
                android:layout_alignBottom="@+id/gbrKupon"
                android:layout_alignRight="@+id/gbrKupon"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_alignEnd="@+id/gbrKupon"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_alignLeft="@+id/gbrKupon"
                android:layout_alignStart="@+id/gbrKupon"
                android:layout_alignTop="@+id/gbrKupon"
                android:layout_marginTop="20dp"
                android:visibility="invisible"/>
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/gbrKupon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/todo"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@android:color/white"
                android:layout_alignParentLeft="true"/>

        <TextView
                android:id="@+id/namakupon"
                android:text="@string/nama_kupon"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/gbrKupon"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                tools:ignore="RtlHardcoded"
                android:layout_toRightOf="@+id/gbrKupon"/>

        <TextView
                android:id="@+id/expdate"
                android:text="@string/exp_date"
                android:textSize="14sp"
                android:maxLines="1"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namakupon"
                android:layout_alignLeft="@+id/namakupon"
                android:layout_alignStart="@+id/namakupon"
                tools:ignore="RtlHardcoded"/>
        <TextView
                android:text="@string/gunakan"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:id="@+id/buttonUseIt"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="6dp"
                android:layout_alignParentTop="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:paddingTop="8dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp" />

    </RelativeLayout>

    <View
            android:layout_below="@+id/singleRow"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f2f2"/>
</RelativeLayout>